# FidruaWatch

./: .gitignore  README.md  README_CN.md  bundled.go  go.mod  main.go  main_test.go  package-lock.json  package.json  test.sh
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
