[package]
name = "fidruawatch"
version = "1.2.0"
description = "FidruaWatch - 文件监控工具"
authors = ["Fidrua"]
edition = "2021"

[lib]
name = "fidruawatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time"] }
dirs = "5"
